--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
-    
+
     <title>Doceria | Single Page</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
@@ -55,7 +55,8 @@
                 <section id="sessao-sobre">
                     <div class="sessao-content">
                         <h1>Sobre nós</h1>
-                        <div class="sessao-minibanner">
+                        <div class="sessao-minibanner"></div>
+                        <div class="sessao-descricao">
                             <p>
                                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore, fuga sapiente repellat explicabo eaque ex quis laudantium iste placeat dignissimos mollitia minus voluptatibus aspernatur dolor recusandae. Neque obcaecati voluptates voluptatum.
                             </p>
@@ -98,9 +99,7 @@
                         <input type="submit" value="Enviar">
                     </form>
                 </section>
-                <footer>
-                    <p>horaDeCodar @ 2023</p>
-                </footer>
+               
             </main>
         </div>
     </div>
